adding css styles.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,300;0,400;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Landing Page</title>
 </head>
 
 <body>
     <header>
-        <h2>Header Logo</h2>
+        <div id="hero-top">
+            <h2>Header Logo</h2>
         <nav>
             <ul>
                 <li><a href="">header link one</a></li>
@@ -27,11 +33,12 @@
         <div class="img-place-holder">
             this is a placeholder for an image
         </div>
+        </div>
     </header>
 
     <main>
-        <div class="info-card">
-            <span>Some random information.</span>
+        <span>Some random information.</span>
+        <div class="boxes-card">
 
             <div class="boxes">
                 <div class="box"></div>
