--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </header>
 
     <main>
-        <span>Some random information.</span>
-        <div class="boxes-card">
+        <div class="tag1">Some random information.</div>
+        <div class="boxes-cards">
 
             <div class="boxes">
                 <div class="box"></div>
