--- a/index.html
+++ b/index.html
@@ -43,24 +43,18 @@
         <div class="tag1">Some random information.</div>
         <div class="boxes-cards">
 
-            <div class="boxes">
                 <div class="box"></div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="boxes">
                 <div class="box"></div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="boxes">
                 <div class="box"></div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="boxes">
                 <div class="box"></div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
         </div>
 
+        <div class="box-text">
+                <div class="text">this is some subtext under an illustration or image</div>
+                <div class="text">this is some subtext under an illustration or image</div>
+                <div class="text">this is some subtext under an illustration or image</div>
+                <div class="text">this is some subtext under an illustration or image</div>
+        </div>
         <article>
             <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actualy read it. Who knows? All I know is that it looks nice.</p>
             <p>Thor, God of Thunder</p>
