cards/article section complete

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <div class="box"></div>
                 <div class="box"></div>
                 <div class="box"></div>
+                
         </div>
 
         <div class="box-text">
@@ -55,19 +56,19 @@
                 <div class="text">this is some subtext under an illustration or image</div>
                 <div class="text">this is some subtext under an illustration or image</div>
         </div>
-        <article>
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actualy read it. Who knows? All I know is that it looks nice.</p>
-            <p>Thor, God of Thunder</p>
-        </article>
-
-        <div class="call-action">
-            <div class="blue-box">
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
-                <button>Sign up</button>
-            </div>
-        </div>
     </main>
+
+    <article>
+        <p><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actualy read it. Who knows? All I know is that it looks nice.</em><br><span class="author">Thor, God of Thunder</span></p>
+    </article>
+
+    <div class="call-action">
+        <div class="blue-box">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+            <button>Sign up</button>
+        </div>
+    </div>
 
     <footer>
         <p>Copyright &copy; The Odin Project 2022</p>
