--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
 
     <div class="call-action">
         <div class="blue-box">
-            <h3>Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
+            <div class="blue-content">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!<p>
+            </div>
             <button>Sign up</button>
         </div>
     </div>
